--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flutterbeginner">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
